<resources>
    <string name="app_name">Project3</string>
    <string name="close">Close</string>
    <string name="log_in">Log in</string>
    <string name="continue_with_catbook">Continue with Catbook</string>
    <string name="continue_with_googrrl">Continue with GooGrrl</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="or">OR</string>
    <string name="email_address">Email address</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="toggle_password">Toggle password</string>
</resources>